# django-online-store

./: .env_sample  .gitignore  catalog_data.json  groups.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_content_alter_blogpost_created_date_and_more.py  0003_alter_blogpost_is_published.py  0004_alter_blogpost_slug.py  0005_alter_blogpost_preview.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_remove_product_manufactured_at_alter_product_image.py  0004_version.py  0005_product_owner.py  0006_alter_product_options_product_is_published.py
catalog/templates/catalog/: base.html  category_list.html  contacts.html  index.html  product.html  product_confirm_delete.html  product_form.html  version_form.html
catalog/templates/catalog/includes/: inc_main_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_verification_code_alter_user_email.py
users/templates/users/: confirm_registration_user.html  login.html  password_recovery_message.html  reset_password.html  user_form.html
